--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
 
 .card {
     width: 400px;
-    margin: 0 auto;
+    margin: 10px auto;
     padding: 20px;
     display: flex;
     justify-content: space-around;
